# Parsifal

./: .gitignore  CHANGELOG.md  Parsifal.cabal  README.md  ungrammar.ebnf
examples/: idyll.ug  lc.ug  rust.ug  ungram.ug
src/: Green.hs  Main.hs  Parsifal.hs
src/Parsifal/: Gen.hs  Internal.hs  Parser.hs  Ungrammar.hs
