cabal-version:      3.0
name:               Parsifal
version:            0.1.0.0
synopsis:           An resilient LL parsing library
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             mcdearman
maintainer:         mcdearmanchris@gmail.com
-- copyright:
category:           Parsing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable Parsifal
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0
    hs-source-dirs:   src
    default-language: Haskell2010
